erDiagram
    USERS {
        int id PK
        string role
        string phone_number
        string email
        boolean is_verified
        boolean is_active
    }

    STUDENT_PROFILES {
        int id PK
        int user_id FK
        string full_name
        string address_barangay
        string school_name
        string course
        string year_level
    }

    APPLICATIONS {
        int id PK
        int student_id FK
        string school_year
        string semester
        string application_type
        string status
        string interview_result
        decimal final_grant_amount
    }

    DOCUMENTS {
        int id PK
        int application_id FK
        string document_type
        string status
        string file_path
    }

    DOCUMENT_VERSIONS {
        int id PK
        int document_id FK
        int uploaded_by_user_id FK
        int version_number
        string document_status
    }

    BATCHES {
        int id PK
        string batch_type
        string batch_name
        datetime scheduled_date
        string venue
    }

    NOTIFICATIONS {
        int id PK
        int user_id FK
        string title
        string message
        boolean is_read
    }

    APPLICATION_SETTINGS {
        int id PK
        string school_year
        string semester
        date application_start_date
        date application_end_date
        boolean is_open
    }

    USERS ||--o| STUDENT_PROFILES : has
    STUDENT_PROFILES ||--o{ APPLICATIONS : submits
    APPLICATIONS ||--o{ DOCUMENTS : includes
    DOCUMENTS ||--o{ DOCUMENT_VERSIONS : keeps
    USERS ||--o{ DOCUMENT_VERSIONS : uploads
    USERS ||--o{ NOTIFICATIONS : receives
    BATCHES o|--o{ APPLICATIONS : schedules
